# tg-message-search

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  tailwind.config.js
.github/workflows/: pages.yml
scripts/: preprocess_opcorpora.py
src/: deserialization.rs  lemmatizer.rs  lib.rs  main.rs  merge.rs  query.rs  searcher.rs  thread_dsu.rs  utils.rs
src/analysis/: deserialization.rs  lemmatizer.rs  mod.rs  query.rs  searcher.rs  utils.rs
src/components/: file_input.rs  home.rs  mod.rs  search.rs  thread_list.rs
src/pages/: app.rs  home.rs  mod.rs
www/: index.css  index.html  index.js  package-lock.json  package.json  postcss.config.js  webpack.config.js
