[package]
name = "wasm-chat-searcher"
version = "0.1.0"
authors = ["Mikhail Kiselyov <kiselev.0353@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
flate2 = "1.0.17"

console_error_panic_hook = { version = "0.1.7", optional = true }
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.95"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
opt-level = "s"
