[package]
name = "tg-message-search"
version = "0.1.0"
authors = ["Mikhail Kiselyov <kiselev.0353@gmail.com>"]
edition = "2018"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.50"
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
console_log = "1"
log = "0.4"
flate2 = "1.0.17"
console_error_panic_hook = { version = "0.1.7", optional = true }
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.95"
web-sys = { version = "0.3", features = ["console", "File", "FileList"] }
chrono = "0.4.40"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
